--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" hMy Favorite hobby/ character reviewsref="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
 <body>
     <center>
@@ -14,8 +14,8 @@
         <h1>Playing football</h1>
         <ul class="menu">
             <li class="links"><a href="about">About</a></li>
-        <li class="links">My Favorite hobby/ character reviews </li>
-        <li class="links">My work</li>
+        <li class="links"><a href="My Favorite hobby/ character reviews">My Favorite hobby/ character reviews</a> </li>
+        <li class="links">MMy Favorite hobby/ character reviewsy work</li>
         <li class="links">Contact</li>
         </ul>
         
